<?xml version="1.0" encoding="UTF-8"?>
<!--

    Copyright (c) 2018 Institut de recherches cliniques de Montreal (IRCM)

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU Affero General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU Affero General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.

-->
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.0.13</version>
  </parent>
  <modelVersion>4.0.0</modelVersion>
  <groupId>ca.qc.ircm</groupId>
  <artifactId>lanaseq</artifactId>
  <name>LANAseq</name>
  <version>1.10-SNAPSHOT</version>
  <inceptionYear>2018</inceptionYear>
  <packaging>war</packaging>
  <description>Location Analysis Net Application for High-throughput sequencing</description>
  <url>https://github.com/francoisrobertlab/lanaseq</url>
  <organization>
    <name>Institut de recherches cliniques de Montreal (IRCM)</name>
    <url>http://www.ircm.qc.ca</url>
  </organization>
  <licenses>
    <license>
      <name>GNU Affero General Public License</name>
      <url>https://www.gnu.org/licenses/agpl.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>
  <developers>
    <developer>
      <id>poitrac</id>
      <name>Christian Poitras</name>
      <email>christian.poitras@ircm.qc.ca</email>
      <organization>IRCM</organization>
      <organizationUrl>http://www.ircm.qc.ca</organizationUrl>
      <timezone>-5</timezone>
      <roles>
        <role>Analyste en informatique</role>
      </roles>
    </developer>
  </developers>
  <scm>
    <connection>scm:git:https://github.com/francoisrobertlab/lanaseq.git</connection>
    <developerConnection>scm:git:https://github.com/francoisrobertlab/lanaseq.git</developerConnection>
    <url>https://github.com/francoisrobertlab/lanaseq</url>
  </scm>
  <issueManagement>
    <system>GitHub</system>
    <url>https://github.com/francoisrobertlab/lanaseq/issues</url>
  </issueManagement>

  <properties>
    <resource.delimiter>$[*]</resource.delimiter>
    <java.version>17</java.version>
    <start-class>ca.qc.ircm.lanaseq.Main</start-class>
    <slow-tests.skip>false</slow-tests.skip>
    <testbench.skip>false</testbench.skip>
    <testbench.maxAttempts>3</testbench.maxAttempts>
    <!-- Dependencies -->
    <vaadin.version>24.3.1</vaadin.version>
    <generate-property-names.version>2.1</generate-property-names.version>
    <querydsl.version>5.0.0</querydsl.version>
    <guava.version>32.0.0-jre</guava.version>
    <karibu-testing.version>1.3.23</karibu-testing.version>
    <greenmail.version>2.0.1</greenmail.version>
    <selenium.version>4.15.0</selenium.version>
    <maven-site-plugin.version>3.9.1</maven-site-plugin.version>
    <maven-project-info-reports-plugin.version>3.4.2</maven-project-info-reports-plugin.version>
    <license-maven-plugin.version>4.1</license-maven-plugin.version>
    <spotbugs-maven-plugin.version>4.7.1.1</spotbugs-maven-plugin.version>
    <apt-maven-plugin.version>1.1.3</apt-maven-plugin.version>
    <migrations-maven-plugin.version>1.1.3</migrations-maven-plugin.version>
  </properties>

  <repositories>
    <repository>
      <id>central</id>
      <url>https://repo.maven.apache.org/maven2</url>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>Vaadin Directory</id>
      <url>https://maven.vaadin.com/vaadin-addons</url>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
  </repositories>
  <pluginRepositories>
    <pluginRepository>
      <id>central</id>
      <url>https://repo.maven.apache.org/maven2</url>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </pluginRepository>
  </pluginRepositories>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>com.vaadin</groupId>
        <artifactId>vaadin-bom</artifactId>
        <version>${vaadin.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework.security</groupId>
      <artifactId>spring-security-test</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.unboundid</groupId>
      <artifactId>unboundid-ldapsdk</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.vaadin</groupId>
      <artifactId>vaadin-testbench</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.vaadin</groupId>
      <artifactId>vaadin-testbench-unit-junit5</artifactId>
      <scope>test</scope>
    </dependency>
    <!-- Required for vaadin-testbench-unit -->
    <dependency>
      <groupId>com.vaadin</groupId>
      <artifactId>vaadin-charts-flow</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.icegreen</groupId>
      <artifactId>greenmail</artifactId>
      <version>${greenmail.version}</version>
      <scope>test</scope>
      <exclusions>
        <exclusion>
          <groupId>junit</groupId>
          <artifactId>junit</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>com.icegreen</groupId>
      <artifactId>greenmail-junit5</artifactId>
      <version>${greenmail.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.h2database</groupId>
      <artifactId>h2</artifactId>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-configuration-processor</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-security</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-data-jpa</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-data-ldap</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-validation</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-mail</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-devtools</artifactId>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>com.vaadin</groupId>
      <artifactId>vaadin-core</artifactId>
    </dependency>
    <dependency>
      <groupId>com.vaadin</groupId>
      <artifactId>vaadin-spring-boot-starter</artifactId>
    </dependency>
    <dependency>
      <groupId>com.vaadin</groupId>
      <artifactId>vaadin-confirm-dialog-flow</artifactId>
    </dependency>
    <dependency>
      <groupId>com.querydsl</groupId>
      <artifactId>querydsl-core</artifactId>
      <version>${querydsl.version}</version>
    </dependency>
    <dependency>
      <groupId>com.querydsl</groupId>
      <artifactId>querydsl-jpa</artifactId>
      <version>${querydsl.version}</version>
      <classifier>jakarta</classifier>
    </dependency>
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>${guava.version}</version>
    </dependency>
    <dependency>
      <groupId>org.thymeleaf</groupId>
      <artifactId>thymeleaf</artifactId>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-api</artifactId>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-to-slf4j</artifactId>
    </dependency>
    <dependency>
      <groupId>ca.qc.ircm</groupId>
      <artifactId>generate-property-names</artifactId>
      <version>${generate-property-names.version}</version>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>org.mariadb.jdbc</groupId>
      <artifactId>mariadb-java-client</artifactId>
      <scope>runtime</scope>
    </dependency>
  </dependencies>

  <build>
    <testResources>
      <testResource>
        <directory>src/test/resources</directory>
      </testResource>
      <testResource>
        <directory>src/test/resources</directory>
        <includes>
          <include>**/*.sql</include>
        </includes>
        <filtering>true</filtering>
      </testResource>
    </testResources>
    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>maven-resources-plugin</artifactId>
          <configuration>
            <delimiters>
              <delimiter>${resource.delimiter}</delimiter>
            </delimiters>
            <useDefaultDelimiters>false</useDefaultDelimiters>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-clean-plugin</artifactId>
          <configuration>
            <filesets>
              <fileset>
                <directory>${basedir}</directory>
                <includes>
                  <include>node_modules/**</include>
                  <include>package.json</include>
                  <include>package-lock.json</include>
                  <include>tsconfig.json</include>
                  <include>types.d.ts</include>
                  <include>vite.config.ts</include>
                  <include>vite.generated.ts</include>
                  <include>webpack.config.js</include>
                  <include>webpack.generated.js</include>
                </includes>
              </fileset>
            </filesets>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <configuration>
            <excludes>
              <exclude>ca/qc/ircm/lanaseq/test/**/*.java</exclude>
              <exclude>ca/qc/ircm/lanaseq/**/*ItTest.java</exclude>
            </excludes>
            <systemPropertyVariables>
              <slow-tests.skip>${slow-tests.skip}</slow-tests.skip>
            </systemPropertyVariables>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-failsafe-plugin</artifactId>
          <configuration>
            <includes>
              <include>ca/qc/ircm/lanaseq/**/*ItTest.java</include>
            </includes>
            <systemPropertyVariables>
              <slow-tests.skip>${slow-tests.skip}</slow-tests.skip>
              <testbench.skip>${testbench.skip}</testbench.skip>
              <com.vaadin.testbench.Parameters.maxAttempts>${testbench.maxAttempts}
              </com.vaadin.testbench.Parameters.maxAttempts>
            </systemPropertyVariables>
            <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-site-plugin</artifactId>
          <version>${maven-site-plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>com.mysema.maven</groupId>
          <artifactId>apt-maven-plugin</artifactId>
          <version>${apt-maven-plugin.version}</version>
          <executions>
            <execution>
              <id>querydsl-metamodel</id>
              <goals>
                <goal>process</goal>
              </goals>
              <phase>generate-sources</phase>
              <configuration>
                <outputDirectory>target/generated-sources/querydsl</outputDirectory>
                <processor>com.querydsl.apt.jpa.JPAAnnotationProcessor</processor>
              </configuration>
            </execution>
          </executions>
          <dependencies>
            <dependency>
              <groupId>com.querydsl</groupId>
              <artifactId>querydsl-apt</artifactId>
              <version>${querydsl.version}</version>
              <classifier>jakarta</classifier>
            </dependency>
          </dependencies>
        </plugin>
        <plugin>
          <groupId>com.vaadin</groupId>
          <artifactId>vaadin-maven-plugin</artifactId>
          <version>${vaadin.version}</version>
          <configuration>
            <requireHomeNodeExec>true</requireHomeNodeExec>
          </configuration>
          <executions>
            <execution>
              <id>vaadin-prepare-frontend</id>
              <goals>
                <goal>prepare-frontend</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-maven-plugin</artifactId>
          <configuration>
            <executable>true</executable>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.mybatis.maven</groupId>
          <artifactId>migrations-maven-plugin</artifactId>
          <version>${migrations-maven-plugin.version}</version>
          <configuration>
            <repository>src/migration</repository>
          </configuration>
          <dependencies>
            <dependency>
              <groupId>org.mariadb.jdbc</groupId>
              <artifactId>mariadb-java-client</artifactId>
              <version>${mariadb.version}</version>
            </dependency>
          </dependencies>
        </plugin>
        <plugin>
          <groupId>com.mycila</groupId>
          <artifactId>license-maven-plugin</artifactId>
          <version>${license-maven-plugin.version}</version>
          <configuration>
            <properties>
              <owner>${project.organization.name}</owner>
            </properties>
            <headerDefinitions>
              <headerDefinition>src/license/javacomment_style.xml</headerDefinition>
            </headerDefinitions>
            <mapping>
              <java>JAVACOMMENT_STYLE</java>
              <yml>SCRIPT_STYLE</yml>
              <ini>SEMICOLON_STYLE</ini>
              <scss>JAVADOC_STYLE</scss>
              <ldif>SCRIPT_STYLE</ldif>
            </mapping>
            <licenseSets>
              <licenseSet>
                <header>license-header.txt</header>
                <excludes>
                  <exclude>**/.*</exclude>
                  <exclude>**/LICENSE</exclude>
                  <exclude>**/*.txt</exclude>
                  <exclude>**/*.log*</exclude>
                  <exclude>**/*.fastq</exclude>
                  <exclude>/frontend/generated/**</exclude>
                  <exclude>/frontend/index.html</exclude>
                  <exclude>node_modules/**</exclude>
                  <exclude>package*.json</exclude>
                  <exclude>types.d.ts</exclude>
                  <exclude>vite.*.ts</exclude>
                  <exclude>webpack.*.js</exclude>
                </excludes>
              </licenseSet>
            </licenseSets>
          </configuration>
          <executions>
            <execution>
              <goals>
                <goal>check</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <artifactId>maven-source-plugin</artifactId>
      </plugin>
      <plugin>
        <artifactId>maven-javadoc-plugin</artifactId>
      </plugin>
      <plugin>
        <artifactId>maven-failsafe-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>com.vaadin</groupId>
        <artifactId>vaadin-maven-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>io.github.git-commit-id</groupId>
        <artifactId>git-commit-id-maven-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>com.mysema.maven</groupId>
        <artifactId>apt-maven-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>com.mycila</groupId>
        <artifactId>license-maven-plugin</artifactId>
      </plugin>
    </plugins>
  </build>

  <reporting>
    <plugins>
      <plugin>
        <artifactId>maven-project-info-reports-plugin</artifactId>
        <version>${maven-project-info-reports-plugin.version}</version>
      </plugin>
      <plugin>
        <artifactId>maven-surefire-report-plugin</artifactId>
        <version>${maven-surefire-plugin.version}</version>
        <reportSets>
          <reportSet>
            <reports>
              <report>report-only</report>
            </reports>
          </reportSet>
        </reportSets>
        <configuration>
          <reportsDirectories>
            <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
            <reportsDirectory>${project.build.directory}/failsafe-reports</reportsDirectory>
          </reportsDirectories>
        </configuration>
      </plugin>
      <plugin>
        <groupId>com.github.spotbugs</groupId>
        <artifactId>spotbugs-maven-plugin</artifactId>
        <version>${spotbugs-maven-plugin.version}</version>
      </plugin>
    </plugins>
  </reporting>

  <profiles>
    <profile>
      <id>production</id>
      <build>
        <plugins>
          <plugin>
            <groupId>com.vaadin</groupId>
            <artifactId>vaadin-maven-plugin</artifactId>
            <version>${vaadin.version}</version>
            <executions>
              <execution>
                <id>vaadin-build-frontend</id>
                <goals>
                  <goal>build-frontend</goal>
                </goals>
                <phase>compile</phase>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>test-quick</id>
      <activation>
        <property>
          <name>quick</name>
        </property>
      </activation>
      <properties>
        <slow-tests.skip>true</slow-tests.skip>
      </properties>
    </profile>
    <profile>
      <id>site-quick</id>
      <activation>
        <property>
          <name>quick</name>
        </property>
      </activation>
      <properties>
        <dependency.locations.enabled>false</dependency.locations.enabled>
        <dependency.details.enabled>false</dependency.details.enabled>
      </properties>
    </profile>
  </profiles>
</project>
